# test-joao

./: Cargo.toml  README.md  pyproject.toml  tips.txt
src/: aspect_ratio.rs  main.rs  utils.rs
