[tool.poetry]
name = "telia-playground"
version = "0.1.0"
description = ""
authors = ["goncalo.castelb <goncalo.ferreira.ferrao.castel-branco@telia.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
